tests/negative/gold/clashing-method-test.gold
tests/negative/clashing-method-test.toit:9:3: error: Redefinition of 'foo'
  foo:
  ^~~
tests/negative/clashing-method-test.toit:6:3: note: First definition of 'foo'
  foo:
  ^~~
Compilation failed
